kanc/src/tests/sample_code/should_fail/single_file/type_check/call_arg_labeledness_mismatch/labeled_variant_unlabeled_args.k
type Nat {
    .o: Nat,
    .s(pred~n: Nat): Nat,
}

let right = Nat.s(pred: Nat.o);
let wrong = Nat.s(Nat.o);
